k8s/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dockergen
  name: dockergen-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dockergen
      component: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dockergen
        component: api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: component
                operator: In
                values:
                  - api
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: dockergen
        image: chaos.azurecr.io/dockergen-api:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            scheme: "HTTP"
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          requests:
            memory: "50Mi"
            cpu: "125m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: azure-cr
---

apiVersion: v1
kind: Service
metadata:
  namespace: dockergen
  name: dockergen-api
  labels:
    name: dockergen-api
spec:
  type: ClusterIP
  ports:
  - port: 443
  selector:
    app: dockergen
    component: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dockergen
  name: dockergen-api
  annotations:
    "kubernetes.io/ingress.class": "kempLB"
    "kemp.ax/vspip": "192.168.6.200"
    "kemp.ax/vsport": "443"
    "kemp.ax/vsprot": "tcp"
    "kemp.ax/checkurl": "/health"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.dockergen.frodehus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dockergen-api
            port:
              number: 443
