k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dockergen
  name: dockergen
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dockergen
      component: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dockergen
        component: web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: component
                operator: In
                values:
                  - web
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: dockergen
        image: chaos.azurecr.io/dockergen:b7739aa4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            scheme: "HTTPS"
            path: /
            port: 443
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - containerPort: 443
        resources:
          requests:
            memory: "50Mi"
            cpu: "125m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: azure-cr
---

apiVersion: v1
kind: Service
metadata:
  namespace: dockergen
  name: dockergen
  labels:
    name: dockergen
spec:
  type: ClusterIP
  ports:
  - port: 443
  selector:
    app: dockergen
    component: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dockergen
  name: dockergen
  annotations:
    "kubernetes.io/ingress.class": "kempLB"
    "kemp.ax/vspip": "192.168.6.200"
    "kemp.ax/vsport": "443"
    "kemp.ax/vsprot": "tcp"
    "kemp.ax/vsid": "1"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dockergen.frodehus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dockergen
            port:
              number: 443
